# AgilePlus

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md  _typos.toml  buf.gen.yaml  package-lock.json  package.json  process-compose.yml
.github/workflows/: audit.yml  changelog.yml  ci.yml  deploy.yml  gate-check.yml  policy-gate.yml  promote.yml  publish.yml
.work-audit/: repo-manifest.json
agileplus-agents/: Makefile
agileplus-agents/crates/agileplus-agent-review/: Cargo.toml
agileplus-agents/crates/agileplus-agent-review/src/: lib.rs
agileplus-agents/crates/agileplus-agent-service/: Cargo.toml
agileplus-mcp/: Makefile
crates/agileplus-api/: Cargo.toml
crates/agileplus-api/src/: api_key.rs  error.rs  lib.rs  responses.rs  router.rs  state.rs
crates/agileplus-api/tests/: api_integration.rs
crates/agileplus-benchmarks/benches/: api_response_times.rs  event_append_throughput.rs  event_replay.rs  graph_query_perf.rs  sync_roundtrip.rs
crates/agileplus-benchmarks/src/: helpers.rs
crates/agileplus-cache/src/: health.rs  limiter.rs
crates/agileplus-cli/: Cargo.toml
crates/agileplus-cli/src/: agent_stub.rs  main.rs
crates/agileplus-cli/tests/: cli_integration.rs
crates/agileplus-contract-tests/: Cargo.toml
crates/agileplus-dashboard/: Cargo.toml
crates/agileplus-dashboard/src/: app_state.rs  lib.rs  routes.rs  templates.rs
crates/agileplus-domain/: Cargo.toml
crates/agileplus-domain/src/: config.rs  credentials.rs  error.rs  lib.rs
crates/agileplus-domain/src/domain/: audit.rs  event.rs  feature.rs  governance.rs  mod.rs  service_health.rs  snapshot.rs  state_machine.rs  work_package.rs
crates/agileplus-domain/src/ports/: agent.rs  mod.rs  observability.rs  review.rs  storage.rs  vcs.rs
crates/agileplus-domain/tests/: proptest_audit.rs
crates/agileplus-events/src/: hash.rs  lib.rs  query.rs  replay.rs  snapshot.rs  store.rs
crates/agileplus-git/: Cargo.toml
crates/agileplus-git/src/: lib.rs
crates/agileplus-git/src/artifact/: mod.rs
crates/agileplus-git/src/repository/: mod.rs
crates/agileplus-git/src/worktree/: mod.rs
crates/agileplus-git/tests/: integration.rs
crates/agileplus-github/src/: client.rs  sync.rs
crates/agileplus-graph/src/: nodes.rs  queries.rs  relationships.rs  store.rs
crates/agileplus-grpc/: Cargo.toml
crates/agileplus-grpc/src/: conversions.rs  lib.rs  proxy.rs  streaming.rs
crates/agileplus-grpc/src/server/: mod.rs
crates/agileplus-grpc/tests/: grpc_integration.rs  pact_schema.rs
crates/agileplus-integration-tests/: Cargo.toml
crates/agileplus-integration-tests/tests/: dashboard_sse.rs  feature_lifecycle.rs  service_failure.rs  sync_conflict.rs
crates/agileplus-nats/src/: bus.rs  envelope.rs
crates/agileplus-p2p/: Cargo.toml
crates/agileplus-p2p/src/: device.rs  discovery.rs  git_merge.rs  lib.rs  replication.rs  vector_clock.rs
crates/agileplus-plane/: Cargo.toml
crates/agileplus-plane/src/: client.rs  content_hash.rs  inbound.rs  labels.rs  lib.rs  outbound.rs  state_mapper.rs  sync.rs  sync_queue.rs  webhook.rs
crates/agileplus-sqlite/: Cargo.toml
crates/agileplus-sqlite/src/: lib.rs  rebuild.rs
crates/agileplus-sqlite/src/migrations/: mod.rs
crates/agileplus-sqlite/src/repository/: audit.rs  events.rs  evidence.rs  features.rs  governance.rs  metrics.rs  mod.rs  work_packages.rs
crates/agileplus-subcmds/: Cargo.toml
crates/agileplus-subcmds/src/: audit.rs  dashboard.rs  device.rs  events.rs  lib.rs  platform.rs  registry.rs  sync.rs
crates/agileplus-sync/: Cargo.toml
crates/agileplus-telemetry/: Cargo.toml
crates/agileplus-telemetry/src/: lib.rs
crates/agileplus-telemetry/src/logs/: mod.rs
crates/agileplus-telemetry/src/metrics/: mod.rs
crates/agileplus-telemetry/src/traces/: mod.rs
docs/: index.md
docs/.vitepress/: config.mts
docs/agents/: governance-constraints.md  harness-integration.md  prompt-format.md
docs/architecture/: domain-model.md  overview.md  ports.md
docs/concepts/: agent-dispatch.md  feature-lifecycle.md  governance.md  spec-driven-dev.md
docs/developers/: contributing.md  extending.md  testing.md
docs/doc-system/: layers.md
docs/examples/: agent-integration.md  full-pipeline.md  triage-workflow.md
docs/guide/: configuration.md  getting-started.md  init.md  quick-start.md  sync.md  triage.md  workflow.md
docs/process/: analyze.md  checklists.md  constitution.md  retrospective.md  status-dashboard.md
docs/reference/: cli.md  crates.md  env-vars.md  subcommands.md
docs/roadmap/: index.md  release-notes.md
docs/sdk/: grpc-api.md  mcp-tools.md  storage-port.md  vcs-port.md
docs/workflow/: accept.md  clarify.md  implement.md  merge.md  plan.md  research.md  review.md  specify.md  tasks.md
kitty-specs/001-spec-driven-development-engine/: plan.md  spec.md  tasks.md
kitty-specs/002-org-wide-release-governance-dx-automation/: tasks.md
kitty-specs/003-agileplus-platform-completion/: spec.md  tasks.md
pheno-cli/: go.mod
pheno-cli/cmd/: audit.go  bootstrap.go  matrix.go  root.go
python/: pyproject.toml  ruff.toml
python/src/agileplus_mcp/: __main__.py  grpc_client.py  server.py
python/src/agileplus_mcp/sampling/: __init__.py
python/src/agileplus_mcp/tools/: features.py  governance.py
python/src/agileplus_proto/: __init__.py
python/tests/: test_grpc_client.py  test_tools.py
python/tests/bdd/: environment.py
python/tests/bdd/steps/: given_steps.py  then_steps.py  when_steps.py
python/tests/contract/: test_agileplus_consumer.py
python/tests/integration/: test_mcp_workflow.py
rust/: Cargo.toml  deny.toml
templates/: base.html
templates/pages/: dashboard.html  feature-detail.html  settings.html
templates/partials/: agent-activity.html  event-timeline.html  feature-card.html  health-panel.html  kanban.html  wp-list.html
templates/static/: alpine.min.js  htmx.min.js  style.css
tests/bdd/: fixtures_test.rs  main.rs
tests/contracts/: api_events_contract.rs  dashboard_api_contract.rs  events_sqlite_contract.rs  sync_plane_contract.rs
(+105 files in other folders)
