[project]
name = "agileplus-proto"
version = "0.1.0"
description = "Generated gRPC stubs for AgilePlus"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.62",
    "grpcio-tools>=1.62",
    "protobuf>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agileplus_proto"]
