[project]
name = "agileplus-python"
version = "0.1.0"
description = "AgilePlus Python components: gRPC proto stubs and MCP service"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.62",
    "grpcio-tools>=1.62",
    "protobuf>=5.0",
    "fastmcp>=2.0",
    "grpcio-health-checking>=1.62",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agileplus_proto", "src/agileplus_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
agileplus-mcp = "agileplus_mcp.server:main"
