[package]
name = "agileplus-git"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agileplus-domain = { path = "../agileplus-domain" }
git2 = { version = "0.20", features = ["vendored-libgit2"] }
serde.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
