[package]
name = "agileplus-grpc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agileplus-domain = { path = "../agileplus-domain" }
agileplus-proto = { path = "../../rust" }
tonic = "0.12"
prost = "0.13"
tokio.workspace = true

[build-dependencies]
tonic-build = "0.12"
