[package]
name = "agileplus-grpc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agileplus-domain = { path = "../agileplus-domain" }
agileplus-proto = { path = "../../rust" }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
