[package]
name = "agileplus-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agileplus-domain = { path = "../agileplus-domain" }
opentelemetry = "0.28"
opentelemetry-otlp = "0.28"
tracing.workspace = true
tracing-subscriber.workspace = true
