[package]
name = "agileplus-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agileplus-domain = { path = "../agileplus-domain" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.27"
opentelemetry = { version = "0.27", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "metrics", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.27", features = ["trace", "metrics", "rt-tokio"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9"
chrono = { workspace = true }
thiserror = { workspace = true }
dirs = "5"
url = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tracing-test = "0.2"
tempfile = "3"
