[package]
name = "agileplus-agent-review"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Review-loop logic: polls GitHub/Coderabbit, feeds comments back to agents"

[dependencies]
agileplus-agent-dispatch = { path = "../agileplus-agent-dispatch" }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
